converted gete and getJ to batch operations, moving on to accumulating sparse tensors b and H

--- a/v3/pose_graph/pose_graph_optimization.ipynb
+++ b/v3/pose_graph/pose_graph_optimization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 718,
    "id": "db869367",
    "metadata": {},
    "outputs": [
@@ -54,6 +54,7 @@
     "  except RuntimeError as e:\n",
     "    print(e)\n",
     "#-----------------------------------------------------------------\n",
+    "np.set_printoptions(precision=8, linewidth = 75)\n",
     "\n",
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -234,35 +235,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 695,
    "id": "78eb22a7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_e_ij(Zij, Xij):\n",
+    "def get_e(Zij, Xij):\n",
     "    \"\"\"calculates error function w.r.t. nodes i and j\n",
     "    Zij == pose j relative to i according to nodes (rotation matrix)\n",
     "    Xij == pose j relative to i according to constraints (rotation matrix)\n",
     "    \"\"\"        \n",
-    "    e_ij = t2v(tf.linalg.pinv(Zij) @ Xij)\n",
+    "    e = t2v(tf.linalg.pinv(Zij) @ Xij)\n",
     "\n",
-    "    return(e_ij)    "
+    "    return(e)    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 696,
    "id": "f0c970bd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tf.Tensor(\n",
+      "[[ 0.80435219  1.09373546 -0.55675126  0.65971233  1.48829689 -1.55600904]\n",
+      " [ 0.0747603  -0.36432632 -0.95713859 -1.0539615   0.58460129 -0.59699135]], shape=(2, 6), dtype=float64)\n"
+     ]
+    }
+   ],
    "source": [
-    "Zij = v2t(np.array([1.,  1.9, 0., 0.0003, 0.0005, 0.01 ])) # get from graph \n",
-    "Xij = v2t(np.array([1.1, 2.0, 0., 0.,     0.0,    0.008])) # get from odometry message\n",
-    "# Zij =  v2t(np.zeros([2,6]))\n",
-    "# Xij =  v2t(np.random.randn(2,6))\n",
+    "# Zij = v2t(np.array([1.,  1.9, 0., 0.0003, 0.0005, 0.01 ])) # get from graph \n",
+    "# Xij = v2t(np.array([1.1, 2.0, 0., 0.,     0.0,    0.008])) # get from odometry message\n",
+    "Zij =  v2t(np.zeros([2,6]))\n",
+    "Xij =  v2t(np.random.randn(2,6))\n",
     "\n",
-    "e_ij = get_e_ij(Zij, Xij)\n",
-    "# print(e_ij)"
+    "e = get_e(Zij, Xij)\n",
+    "print(e)"
    ]
   },
   {
@@ -303,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 700,
    "id": "ce6d7652",
    "metadata": {},
    "outputs": [],
@@ -314,7 +325,6 @@
     "        \n",
     "        NOTE: this works with batch operations: error vectors passed in as tensor will result in\n",
     "                corresponding output in the same order \n",
-    "        \n",
     "    \"\"\"\n",
     "    e_ij = tf.cast(e_ij, tf.float32)\n",
     "    \n",
@@ -359,18 +369,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 732,
    "id": "3cea8ad6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "A_ij, B_ij = get_A_ij_B_ij(e_ij)\n",
-    "# print(\"A_ij:\\n\", A_ij.numpy().astype(np.float16), \"\\n B_ij: \\n\", B_ij.numpy().astype(np.float16))\n"
+    "def get_J(e, ij):\n",
+    "    \"\"\"Forms sparse jacobian J, with entries A and B at indices i and j \n",
+    "    J == [N, 6, 6*N], N = number of nodes\n",
+    "    e == [N, 6] error vectors\n",
+    "    ij == [N, 2] contains scan indices of each node ex: [scan2, scan5]\n",
+    "    \"\"\"\n",
+    "    total_num_of_nodes = np.max(ij) + 1 #TODO: is this too big??\n",
+    "    if len(tf.shape(ij))< 2: #expand dimensions if only single pair passed in\n",
+    "        ij = ij[None,:]\n",
+    "    A_ij, B_ij = get_A_ij_B_ij(e)\n",
+    "    \n",
+    "    # Need to tile DIFFERENT AMOUNT depending on the index \n",
+    "    #    TODO: move to batch operation?\n",
+    "    J = tf.zeros([0,6,total_num_of_nodes*6])\n",
+    "    for k in range(len(ij)):\n",
+    "        #TODO: add logic for when i and j are same value, when j = i + 1 ...\n",
+    "        leading = tf.tile(tf.zeros([6,6]), [1, ij[k,0] ]) #leading zeros before i\n",
+    "#         print(\"\\n leading \\n\", leading)\n",
+    "        between = tf.tile(tf.zeros([6,6]), [1, ij[k,1] - ij[k,0] - 1 ]) #zeros between i and j\n",
+    "#         print(\"\\n between: \\n\", between)\n",
+    "        ending  = tf.tile(tf.zeros([6,6]), [1, total_num_of_nodes - ij[k,1] - 1 ])\n",
+    "        J_ij = tf.concat([leading, A_ij[k], between, B_ij[k], ending], axis = 1)\n",
+    "        J = tf.concat((J, J_ij[None,:,:]), axis = 0)\n",
+    "\n",
+    "    return J"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 734,
+   "id": "eee31e2a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ij = tf.constant(odometry_history[1:3,6:].astype(int))\n",
+    "ij = np.array([[1,3],\n",
+    "               [0,2]])\n",
+    "# print(ij)\n",
+    "# print(np.max(ij))\n",
+    "# print(\"e: \\n\", e)\n",
+    "\n",
+    "J = get_J(e, ij)  \n",
+    "# print(\"\\n J \\n\",J[0])\n",
+    "# print(\"\\n J_ij \\n\",tf.shape(J),  \"\\n\", np.around(J.numpy(), 3)[0])"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "7e469ff9",
+   "id": "afbf95ce",
    "metadata": {},
    "source": [
     "# Accumumlate Sparse Tensors\n",
@@ -379,21 +431,48 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 199,
-   "id": "3c041960",
+   "cell_type": "markdown",
+   "id": "3166659e",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "st_a = tf.sparse.SparseTensor(indices=[[0, 2], [3, 4]],\n",
-    "                       values=[31.0, 2.0], \n",
-    "                       dense_shape=[4, 6])\n",
-    "st_b = tf.sparse.SparseTensor(indices=[[0, 2], [3, 0]],\n",
-    "                       values=[56.0, 38.0],\n",
-    "                       dense_shape=[4, 6])\n",
-    "st_sum = tf.sparse.add(st_a, st_b)\n",
-    "# print(st_sum)\n",
-    "# print(tf.linalg.pinv(tf.sparse.to_dense(st_sum)).numpy())"
+    "\\begin{equation}\n",
+    "\\Large\n",
+    "b^T = \\sum_{ij}^{}b_{ij} = \\sum_{ij}^{}e_{ij}^T \\Omega_{ij} J_{ij}\n",
+    "\\end{equation}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 731,
+   "id": "de8e65ff",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2, 6)\n",
+      "(2, 6, 24)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#TODO: do matrix multiplication to get b\n",
+    "print(np.shape(e))\n",
+    "print(np.shape(J))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e3abe80a",
+   "metadata": {},
+   "source": [
+    "\\begin{equation}\n",
+    "\\Large\n",
+    "H = \\sum_{ij}^{}H_{ij} = \\sum_{ij}^{}J_{ij}^T \\Omega J_{ij}\n",
+    "\\end{equation}\n",
+    "\n",
+    "Init Hessian once at start of simulation, update in place as new linearizations are added(?)"
    ]
   },
   {
@@ -405,72 +484,48 @@
     "\n",
     "\\begin{equation}\n",
     "\\Large\n",
-    "x \\rightarrow x + \\Delta x\n",
-    "\\end{equation}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e3abe80a",
-   "metadata": {},
-   "source": [
-    "\\begin{equation}\n",
-    "\\Large\n",
     "H \\Delta x = -b\n",
     "\\end{equation}\n",
     "\n",
     "\\begin{equation}\n",
     "\\Large\n",
-    "b^T = \\sum_{ij}^{}b_{ij} = \\sum_{ij}^{}e_{ij}^T \\Omega_{ij} J_{ij}\n",
-    "\\end{equation}\n",
-    "\n",
-    "\\begin{equation}\n",
-    "\\Large\n",
-    "H = \\sum_{ij}^{}H_{ij} = \\sum_{ij}^{}J_{ij}^T \\Omega J_{ij}\n",
-    "\\end{equation}\n",
-    "\n",
-    "Init Hessian once at start of simulation, update in place as new linearizations are added(?)"
+    "x \\rightarrow x + \\Delta x\n",
+    "\\end{equation}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 306,
-   "id": "ce4df933",
+   "execution_count": 338,
+   "id": "9a1f2c1e",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SparseTensor(indices=tf.Tensor(\n",
-      "[[1 3]\n",
-      " [3 1]\n",
-      " [5 5]], shape=(3, 2), dtype=int64), values=tf.Tensor([10.5  10.5  -0.55], shape=(3,), dtype=float32), dense_shape=tf.Tensor([6 6], shape=(2,), dtype=int64))\n",
       "tf.Tensor(\n",
       "[[ 0.    0.    0.    0.    0.    0.  ]\n",
-      " [ 0.    0.    0.   10.5   0.    0.  ]\n",
+      " [ 0.    0.    0.    1.5   0.    0.  ]\n",
       " [ 0.    0.    0.    0.    0.    0.  ]\n",
-      " [ 0.   10.5   0.    0.    0.    0.  ]\n",
+      " [ 0.    1.5   0.    0.    0.    0.  ]\n",
       " [ 0.    0.    0.    0.    0.    0.  ]\n",
-      " [ 0.    0.    0.    0.    0.   -0.55]], shape=(6, 6), dtype=float32)\n",
-      "tf.Tensor(0.0, shape=(), dtype=float32)\n"
+      " [ 0.    0.    0.    0.    0.   -0.55]], shape=(6, 6), dtype=float32)\n"
      ]
     }
    ],
    "source": [
-    "# TRY: tf.linalg.cholesky_solve\n",
     "indices = tf.constant([[1,3], [3,1], [5,5]], dtype = tf.int64) #[N, ndims]\n",
-    "values = tf.constant([10.5, 10.5, -0.55])\n",
+    "values = tf.constant([1.5, 1.5, -0.55])\n",
     "dense_shape = tf.constant([6, 6], dtype = tf.int64)\n",
     "sparse_J =  tf.sparse.SparseTensor(indices, values, dense_shape)\n",
-    "print(sparse_J)\n",
+    "# print(sparse_J)\n",
     "print(tf.sparse.to_dense(sparse_J))\n",
-    "print(tf.linalg.det(tf.sparse.to_dense(sparse_J)))"
+    "# print(tf.linalg.det(tf.sparse.to_dense(sparse_J)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 308,
+   "execution_count": 334,
    "id": "3d6d19fc",
    "metadata": {},
    "outputs": [
@@ -479,23 +534,45 @@
      "output_type": "stream",
      "text": [
       "tf.Tensor(\n",
-      "[[10.        +0.j 20.5       +0.j -0.49999976+0.j 10.        +0.j\n",
-      "  10.        +0.j  9.45      +0.j]], shape=(1, 6), dtype=complex64)\n",
-      "tf.Tensor(\n",
       "[[[10.    0.    0.    0.    0.    0.  ]\n",
-      "  [ 0.   10.    0.   10.5   0.    0.  ]\n",
+      "  [ 0.   10.    0.    1.5   0.    0.  ]\n",
       "  [ 0.    0.   10.    0.    0.    0.  ]\n",
-      "  [ 0.   10.5   0.   10.    0.    0.  ]\n",
+      "  [ 0.    1.5   0.   10.    0.    0.  ]\n",
       "  [ 0.    0.    0.    0.   10.    0.  ]\n",
-      "  [ 0.    0.    0.    0.    0.    9.45]]], shape=(1, 6, 6), dtype=float32)\n"
+      "  [ 0.    0.    0.    0.    0.    9.45]]], shape=(1, 6, 6), dtype=float32)\n",
+      "tf.Tensor(\n",
+      "[[[3.1622777  0.         0.         0.         0.         0.        ]\n",
+      "  [0.         3.1622777  0.         0.         0.         0.        ]\n",
+      "  [0.         0.         3.1622777  0.         0.         0.        ]\n",
+      "  [0.         0.47434163 0.         3.1264994  0.         0.        ]\n",
+      "  [0.         0.         0.         0.         3.1622777  0.        ]\n",
+      "  [0.         0.         0.         0.         0.         3.0740852 ]]], shape=(1, 6, 6), dtype=float32)\n",
+      "tf.Tensor(\n",
+      "[[[ 1.3243276e-01  6.8750517e-03 -6.3627459e-02  4.1800316e-02\n",
+      "   -7.5581573e-02  7.2316840e-02]\n",
+      "  [ 3.2426815e-02 -1.0915680e-01 -9.8085918e-02  2.2755232e-01\n",
+      "    1.5731057e-02 -7.1196422e-02]\n",
+      "  [ 1.0956850e-01 -6.9522105e-02 -1.2335294e-01  2.4846908e-02\n",
+      "   -8.1491014e-03 -1.1923991e-01]\n",
+      "  [-3.3212010e-02  1.3281535e-02 -2.4054075e-02  5.6051547e-03\n",
+      "   -1.3199498e-01 -9.8673329e-03]\n",
+      "  [-9.4031021e-02 -7.4097440e-02 -1.1326738e-01 -1.5948808e-01\n",
+      "    1.3333790e-01 -2.8512308e-01]\n",
+      "  [ 5.2931756e-02 -4.4825014e-02 -1.7680891e-01  4.1026372e-02\n",
+      "   -2.7030603e-05 -6.7889021e-05]]], shape=(1, 6, 6), dtype=float32)\n"
      ]
     }
    ],
    "source": [
-    "# test = tf.linalg.cholesky(tf.sparse.to_dense(sparse_J)[None,:,:] + tf.eye(10)[None,:,:]) #needs to be symmetric and positive definite\n",
     "test = tf.sparse.to_dense(sparse_J)[None,:,:] + 10*tf.eye(6)[None,:,:]\n",
-    "print(tf.linalg.eig(test)[0])\n",
-    "print(test)"
+    "print(test)\n",
+    "\n",
+    "chol = tf.linalg.cholesky(test) #needs to be symmetric and positive definite\n",
+    "print(chol)\n",
+    "\n",
+    "rhs = tf.random.normal([1,6,6])\n",
+    "ans =  tf.linalg.cholesky_solve(chol, rhs)\n",
+    "print(ans)"
    ]
   },
   {
@@ -530,7 +607,7 @@
   {
    "cell_type": "code",
    "execution_count": 233,
-   "id": "ebef8bc3",
+   "id": "c29ab330",
    "metadata": {},
    "outputs": [
     {
@@ -591,7 +668,7 @@
   {
    "cell_type": "code",
    "execution_count": 249,
-   "id": "51a25671",
+   "id": "86a759f7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -601,7 +678,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea56712b",
+   "id": "645def28",
    "metadata": {},
    "source": [
     "https://docs.scipy.org/doc/scipy/reference/generated/scipy.sparse.linalg.inv.html#scipy.sparse.linalg.inv"
@@ -609,8 +686,47 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 480,
+   "id": "2bbb497c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.         0.         0.         0.02624309]\n",
+      " [0.         0.         0.         0.        ]\n",
+      " [0.01149425 0.         0.         0.        ]\n",
+      " [0.         0.         0.         0.        ]\n",
+      " [0.         0.         0.         0.00138122]\n",
+      " [0.         0.         0.         0.        ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "st_a = tf.sparse.SparseTensor(indices=[[0, 2], [3, 4]],\n",
+    "                       values=[31.0, 2.0], \n",
+    "                       dense_shape=[4, 6])\n",
+    "st_b = tf.sparse.SparseTensor(indices=[[0, 2], [3, 0]],\n",
+    "                       values=[56.0, 38.0],\n",
+    "                       dense_shape=[4, 6])\n",
+    "st_sum = tf.sparse.add(st_a, st_b)\n",
+    "# print(st_sum)\n",
+    "print(tf.linalg.pinv(tf.sparse.to_dense(st_sum)).numpy())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "1c8b0a27",
+   "id": "c7e0c566",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e4748134",
    "metadata": {},
    "outputs": [],
    "source": []
