added funcs for calculating H and b, starting cholesky stuff

--- a/v3/pose_graph/pose_graph_optimization.ipynb
+++ b/v3/pose_graph/pose_graph_optimization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 718,
+   "execution_count": 2,
    "id": "db869367",
    "metadata": {},
    "outputs": [
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "dbae8a19",
    "metadata": {},
    "outputs": [],
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "01e25b0a",
    "metadata": {},
    "outputs": [],
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "06c66d4c",
    "metadata": {},
    "outputs": [],
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 695,
+   "execution_count": 237,
    "id": "78eb22a7",
    "metadata": {},
    "outputs": [],
@@ -252,28 +252,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 696,
+   "execution_count": 243,
    "id": "f0c970bd",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tf.Tensor(\n",
-      "[[ 0.80435219  1.09373546 -0.55675126  0.65971233  1.48829689 -1.55600904]\n",
-      " [ 0.0747603  -0.36432632 -0.95713859 -1.0539615   0.58460129 -0.59699135]], shape=(2, 6), dtype=float64)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Zij = v2t(np.array([1.,  1.9, 0., 0.0003, 0.0005, 0.01 ])) # get from graph \n",
-    "# Xij = v2t(np.array([1.1, 2.0, 0., 0.,     0.0,    0.008])) # get from odometry message\n",
-    "Zij =  v2t(np.zeros([2,6]))\n",
-    "Xij =  v2t(np.random.randn(2,6))\n",
+    "# # Zij = v2t(np.array([1.,  1.9, 0., 0.0003, 0.0005, 0.01 ])) # get from graph \n",
+    "# # Xij = v2t(np.array([1.1, 2.0, 0., 0.,     0.0,    0.008])) # get from odometry message\n",
+    "# Zij =  v2t(np.zeros([2,6]))\n",
+    "# Xij =  v2t(np.random.randn(2,6))\n",
     "\n",
-    "e = get_e(Zij, Xij)\n",
-    "print(e)"
+    "# e = get_e(Zij, Xij)\n",
+    "# print(e)"
    ]
   },
   {
@@ -314,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 700,
+   "execution_count": 239,
    "id": "ce6d7652",
    "metadata": {},
    "outputs": [],
@@ -369,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 732,
+   "execution_count": 240,
    "id": "3cea8ad6",
    "metadata": {},
    "outputs": [],
@@ -403,21 +393,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 734,
+   "execution_count": 241,
    "id": "eee31e2a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ij = tf.constant(odometry_history[1:3,6:].astype(int))\n",
-    "ij = np.array([[1,3],\n",
-    "               [0,2]])\n",
-    "# print(ij)\n",
-    "# print(np.max(ij))\n",
-    "# print(\"e: \\n\", e)\n",
+    "# # ij = tf.constant(odometry_history[1:3,6:].astype(int))\n",
+    "# ij = np.array([[1,3],\n",
+    "#                [0,2]])\n",
+    "# # print(ij)\n",
+    "# # print(np.max(ij))\n",
+    "# # print(\"e: \\n\", e)\n",
     "\n",
-    "J = get_J(e, ij)  \n",
-    "# print(\"\\n J \\n\",J[0])\n",
-    "# print(\"\\n J_ij \\n\",tf.shape(J),  \"\\n\", np.around(J.numpy(), 3)[0])"
+    "# J = get_J(e, ij)  \n",
+    "# # print(\"\\n J \\n\",J[0])\n",
+    "# # print(\"\\n J \\n\",tf.shape(J),  \"\\n\", np.around(J.numpy(), 3))"
    ]
   },
   {
@@ -443,23 +433,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 731,
-   "id": "de8e65ff",
+   "execution_count": 147,
+   "id": "c29ab330",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(2, 6)\n",
-      "(2, 6, 24)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#TODO: do matrix multiplication to get b\n",
-    "print(np.shape(e))\n",
-    "print(np.shape(J))"
+    "def get_information_matrix(pred_stds):\n",
+    "    \"\"\"returns information matrix sigma from ICET cov_estimates\"\"\"\n",
+    "    pred_stds = tf.convert_to_tensor(pred_stds)[:,:,None] #convert to TF Tensor\n",
+    "    cov = pred_stds @ tf.transpose(pred_stds, (0,2,1))    #convert predicted stds -> covariance matrix\n",
+    "    info = tf.linalg.pinv(cov) #invert\n",
+    "    return info"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 269,
+   "id": "6c6f5206",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_b(e, omega, J):\n",
+    "    \"\"\"gets b matrix, using batched operations \"\"\"\n",
+    "    b_T = tf.math.reduce_sum(tf.transpose(e, (0,2,1)) @ omega @ tf.cast(J, tf.double), axis = 0)\n",
+    "#     print(\"\\n b_T: \\n\", tf.shape(b_T))\n",
+    "    b = tf.transpose(b_T)\n",
+    "#     print(\"e: \\n\", tf.shape(e))\n",
+    "#     print(\"J: \\n\", tf.shape(J))\n",
+    "#     print(\"omega: \\n\", tf.shape(omega))\n",
+    "#     print(\"b: \\n\", tf.shape(b))\n",
+    "    return b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 270,
+   "id": "74ba0aa8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_ij(ij_raw):\n",
+    "    \"\"\"generates ij matrix, which describes which nodes are connected to \n",
+    "       each other through odometry constraints. \n",
+    "       Removes skipped indices and shifts everything to start at 0\"\"\"\n",
+    "\n",
+    "#     print(\"ij_raw: \\n\", ij_raw)    \n",
+    "    y, idx = tf.unique(tf.reshape(ij_raw, [-1]))\n",
+    "#     print(\"\\n y: \\n\", y, \"\\n idx: \\n\", idx)    \n",
+    "    ij = tf.reshape(idx, [-1,2])\n",
+    "#     print(\"ij: \\n\", ij)\n",
+    "    return ij"
    ]
   },
   {
@@ -473,6 +496,60 @@
     "\\end{equation}\n",
     "\n",
     "Init Hessian once at start of simulation, update in place as new linearizations are added(?)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 271,
+   "id": "06ed5e27",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_H(J, omega):\n",
+    "    \"\"\"returns hessian H\"\"\"\n",
+    "    H_ij = tf.transpose(J, (0,2,1)) @ tf.cast(omega, tf.float32) @ J\n",
+    "    H = tf.math.reduce_sum(H_ij, axis = 0)\n",
+    "    return H"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 273,
+   "id": "de8e65ff",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tf.Tensor([42  1], shape=(2,), dtype=int32)\n",
+      "tf.Tensor([42 42], shape=(2,), dtype=int32)\n"
+     ]
+    }
+   ],
+   "source": [
+    "odometry_history = np.load(\"test_data/leddartech_pixset/T_vec_history.npy\")[:10,:] #Load test data\n",
+    "pred_stds_history = np.load(\"test_data/leddartech_pixset/cov_vec_history.npy\")[:10,:]\n",
+    "ij = get_ij(odometry_history[:,6:].astype(np.int32))\n",
+    "\n",
+    "# constraints (from odometry measurements)\n",
+    "Z =  v2t(odometry_history[:,:6])      \n",
+    "# relative pose estimates (from initial configuration of graph)\n",
+    "X =  v2t(odometry_history[:,:6] + 0.01*np.ones(np.shape(odometry_history[:,:6])))\n",
+    "\n",
+    "#TODO: make function to get X given x\n",
+    "\n",
+    "e = get_e(Z, X)\n",
+    "omega = get_information_matrix(pred_stds_history[:,:6])\n",
+    "J = get_J(e, ij)\n",
+    "\n",
+    "b = get_b(e[:,:,None], omega, J)\n",
+    "print(tf.shape(b))\n",
+    "\n",
+    "H = get_H(J, omega)\n",
+    "print(tf.shape(H))"
    ]
   },
   {
@@ -495,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 338,
+   "execution_count": 17,
    "id": "9a1f2c1e",
    "metadata": {},
    "outputs": [
@@ -525,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 334,
+   "execution_count": 18,
    "id": "3d6d19fc",
    "metadata": {},
    "outputs": [
@@ -548,18 +625,18 @@
       "  [0.         0.         0.         0.         3.1622777  0.        ]\n",
       "  [0.         0.         0.         0.         0.         3.0740852 ]]], shape=(1, 6, 6), dtype=float32)\n",
       "tf.Tensor(\n",
-      "[[[ 1.3243276e-01  6.8750517e-03 -6.3627459e-02  4.1800316e-02\n",
-      "   -7.5581573e-02  7.2316840e-02]\n",
-      "  [ 3.2426815e-02 -1.0915680e-01 -9.8085918e-02  2.2755232e-01\n",
-      "    1.5731057e-02 -7.1196422e-02]\n",
-      "  [ 1.0956850e-01 -6.9522105e-02 -1.2335294e-01  2.4846908e-02\n",
-      "   -8.1491014e-03 -1.1923991e-01]\n",
-      "  [-3.3212010e-02  1.3281535e-02 -2.4054075e-02  5.6051547e-03\n",
-      "   -1.3199498e-01 -9.8673329e-03]\n",
-      "  [-9.4031021e-02 -7.4097440e-02 -1.1326738e-01 -1.5948808e-01\n",
-      "    1.3333790e-01 -2.8512308e-01]\n",
-      "  [ 5.2931756e-02 -4.4825014e-02 -1.7680891e-01  4.1026372e-02\n",
-      "   -2.7030603e-05 -6.7889021e-05]]], shape=(1, 6, 6), dtype=float32)\n"
+      "[[[ 0.05622515  0.06674117  0.00209131 -0.00835607 -0.02905761\n",
+      "   -0.12618788]\n",
+      "  [ 0.068854    0.07326397  0.03567062  0.06599127  0.01796907\n",
+      "    0.07600282]\n",
+      "  [ 0.04940329  0.20818421 -0.12486959 -0.06554834 -0.05827968\n",
+      "   -0.06529091]\n",
+      "  [-0.06887669 -0.13288568  0.04117076 -0.12038639 -0.04279433\n",
+      "   -0.09988555]\n",
+      "  [-0.02092358 -0.03086608  0.17814255 -0.01639498  0.00815606\n",
+      "   -0.10422896]\n",
+      "  [-0.00689026 -0.10140619 -0.0629163   0.00720818  0.18635397\n",
+      "    0.09260269]]], shape=(1, 6, 6), dtype=float32)\n"
      ]
     }
    ],
@@ -588,52 +665,6 @@
     "\\end{equation}\n",
     "\n",
     "Optimization routine can't make sense of only relative measurements. We need to specify the first pose as the origin"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 235,
-   "id": "d1f7340e",
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "# Load test data\n",
-    "odometry_history = np.load(\"test_data/leddartech_pixset/T_vec_history.npy\")\n",
-    "cov_estimate_history = np.load(\"test_data/leddartech_pixset/cov_vec_history.npy\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 233,
-   "id": "c29ab330",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(185, 8)\n"
-     ]
-    }
-   ],
-   "source": [
-    "def get_information_matrix(cov_estimate):\n",
-    "    \"\"\"returns information matrix sigma from ICET cov_estimates\"\"\"\n",
-    "    \n",
-    "    print(np.shape(cov_estimate_history))\n",
-    "    \n",
-    "    #convert predicted stds -> covariance matrix\n",
-    "    \n",
-    "    #invert\n",
-    "    \n",
-    "    #convert to TF Tensor\n",
-    "    \n",
-    "    sigma = None #temp\n",
-    "    return sigma\n",
-    "    \n",
-    "sigma = get_information_matrix(cov_estimate_history[:,:6])"
    ]
   },
   {
@@ -667,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": null,
    "id": "86a759f7",
    "metadata": {},
    "outputs": [],
@@ -686,23 +717,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 480,
+   "execution_count": null,
    "id": "2bbb497c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[0.         0.         0.         0.02624309]\n",
-      " [0.         0.         0.         0.        ]\n",
-      " [0.01149425 0.         0.         0.        ]\n",
-      " [0.         0.         0.         0.        ]\n",
-      " [0.         0.         0.         0.00138122]\n",
-      " [0.         0.         0.         0.        ]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "st_a = tf.sparse.SparseTensor(indices=[[0, 2], [3, 4]],\n",
     "                       values=[31.0, 2.0], \n",
